# jetbrains-api

./: .gitignore  CMakeLists.txt  ConfigKeys.h  JetbrainsApplication.cpp  JetbrainsApplication.h  Project.h  README.md  SettingsDirectory.cpp  SettingsDirectory.h  export.cpp  export.h  macros.h
tests/: CMakeLists.txt  NameFormattingTest.cpp  XMLParserTest.cpp
tests/data/: jetbrains-clion.desktop  jetbrains-idea-ce.desktop  jetbrains-idea.desktop
tests/data/jetbrains-clion/: recentProjects.xml
tests/data/jetbrains-clion2020.3/: recentProjects.xml
tests/data/jetbrains-rider/: recentSolutions.xml
